# ferogram

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  flake.nix  shell.nix
.github/workflows/: check.yml  lint.yml  test.yml
ferogram/: Cargo.toml  README.md
ferogram-macros/: Cargo.toml
ferogram-macros/src/: handler.rs  lib.rs
ferogram/examples/: dispatcher-with-macros.rs  dispatcher.rs  from-env.rs
ferogram/src/: client.rs  context.rs  di.rs  dispatcher.rs  error.rs  handler.rs  lib.rs  router.rs  utils.rs
ferogram/src/filter/: and.rs  default.rs  markers.rs  mod.rs  not.rs  or.rs
lib/ferogram/: Cargo.toml  README.md  client.rs
lib/ferogram-lua/: Cargo.toml
lib/ferogram-lua/src/: lib.rs
lib/ferogram-macros/: Cargo.toml
lib/ferogram-macros/src/: lib.rs
lib/ferogram-plugins/: Cargo.toml
lib/ferogram-python/: Cargo.toml  pyproject.toml
lib/ferogram-python/src/: lib.rs
lib/ferogram/src/: cache.rs  client.rs  context.rs  conversation.rs  di.rs  dispatcher.rs  endpoint.rs  error.rs  error_handler.rs  filter.rs  flow.rs  handler.rs  lib.rs  middleware.rs  plugin.rs  router.rs  utils.rs
lib/ferogram/src/filters/: and.rs  command.rs  mod.rs  not.rs  or.rs
lib/ferogram/src/lua/: mod.rs
lib/ferogram/src/plugins/: mod.rs  plugin.rs
lib/ferogram/src/py/: chat.rs  context.rs  message.rs  mod.rs
