[workspace]
members = ["ferogram", "ferogram-macros"]
resolver = "3"

[patch.crates-io]
ferogram = { path = "ferogram" }

[workspace.package]
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
version = "0.2.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AmanoTeam/ferogram"
repository = "https://github.com/AmanoTeam/ferogram"
keywords = ["telegram", "bot", "framework", "grammers"]
edition = "2024"

[workspace.dependencies]
grammers = { git = "https://codeberg.org/Lonami/grammers", package = "grammers-client" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers" }

libsql = "0.9"
tracing = "0.1"
thiserror = "2.0"

# Futures
tokio = { version = "1", default-features = false, features = [
  "sync",
  "signal",
  "rt-multi-thread",
] }
futures-core = { version = "0.3", default-features = false, features = [
  "alloc",
] }
async-recursion = "1.1"
