[package]
name = "ferogram-macros"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT OR Apache-2.0"
description = """
Procedural macros for the ferogram ecosystem.
These macros simplify the creation and management of handlers and other functionalities
within the ferogram ecosystem.
""""
homepage = "https://github.com/AmanoTeam/ferogram"
repository = "https://github.com/AmanoTeam/ferogram"
keywords = ["telegram", "grammers", "macros", "proc-macro"]
edition = "2024"

[lib]
proc-macro = true
