[package]
name = "ferogram"
version = "0.1.2"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT OR Apache-2.0"
description = """
Ferogram is a simple telegram bot framework written in Rust.
"""
homepage = "https://github.com/AmanoTeam/ferogram"
repository = "https://github.com/AmanoTeam/ferogram"
keywords = ["telegram", "bot", "framework", "grammers"]
edition = "2021"

[features]
default = ["macros"]

macros = ["ferogram-macros"]

lua = ["mlua"]
python = ["pyo3", "pyo3-async-runtimes"]

[dependencies]
ferogram-macros = { path = "../ferogram-macros", optional = true }
grammers-client = { git = "https://github.com/Lonami/grammers" }

log = "*"
mlua = { version = "*", features = ["async", "lua54", "module"], optional = true }
pyo3 = { version = "*", features = ["experimental-async", "macros"], optional = true }
regex = "1"
tokio = { version = "1", features = ["fs", "rt", "signal", "sync"] }
rpassword = "7"
async-trait = "*"
futures-util = { version = "*", default-features = false, features = ["alloc"] }
async-recursion = "1"
pyo3-async-runtimes = { version = "*", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "rt", "macros", "signal", "sync"] }
