[package]
name = "ferogram"
version = "0.1.2"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT OR Apache-2.0"
description = """
Ferogram is a simple telegram bot framework written in Rust.
"""
readme = "README.md"
homepage = "https://github.com/AmanoTeam/ferogram"
repository = "https://github.com/AmanoTeam/ferogram"
keywords = ["telegram", "bot", "framework", "grammers"]
edition = "2021"

[lib]
doctest = false

[features]
default = ["macros", "url"]

macros = ["dep:ferogram-macros"]

lua = ["dep:mlua"]
url = ["dep:url"]
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[dependencies]
ferogram-macros = { path = "../ferogram-macros", version = "0.1.0", optional = true }
grammers-client = { git = "https://github.com/Lonami/grammers.git", version = "0.7.0" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers.git", version = "0.7.0" }

log = "0.4.22"
url = { version = "^2.4", optional = true }
mlua = { version = "^0.10", features = ["async", "lua54", "module"], optional = true }
pyo3 = { version = "^0.23", features = ["experimental-async", "macros"], optional = true }
regex = "1.11.1"
tokio = { version = "^1.42", features = ["fs", "rt", "signal", "sync"] }
rpassword = "7.3.1"
async-trait = "^0.1"
futures-util = { version = "^0.3", default-features = false, features = ["alloc"] }
async-recursion = "^1.1"
pyo3-async-runtimes = { version = "^0.23", features = ["tokio-runtime"], optional = true }

[dev-dependencies]
tokio = { version = "^1.42", features = ["macros"] }
rusty-hook = "^0.11"
